--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: Rohitha Karumanchi # the main title
 
-tagline: Tech | CyberSecurity | Learnings # it will display as the subtitle
+tagline: Welcome for Tech | CyberSecurity | Learnings # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   Tech | CyberSecurity | Learnings
@@ -95,7 +95,7 @@ theme_mode: dark # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: 
+avatar: "/assets/img/avatar.jpg"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
